# cd-dynamic-versioning

./: .flake8  README.md  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
cd_dynamic_versioning/: __init__.py
tests/: test_cd_dynamic_versioning.py
