[tool.poetry]
name = "cd-dynamic-versioning"
version = "0.0.0"
description = "Testpackage for dynamic versioning"
authors = ["Yngve Moe <yngve.m.moe@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cd_dynamic_versioning"}]

[tool.poetry.dependencies]
python = ">= 3.8.1,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
flake8-bugbear = "^22.12.6"
flake8-mutable = "^1.2.0"

[tool.poetry-dynamic-versioning]
enable = true
strict = true
vcs = "git"
style = "semver"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?$"

[tool.isort]
profile = "black"
line_length = 100
known_first_party = []

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | profiling
)/
'''


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"